syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";

import "google/protobuf/timestamp.proto";

package com.sourceforgery.tachikoma.mq;

// All messages that can be queued/broadcasted to the MQ
message DeliveryNotificationMessage {
    google.protobuf.Timestamp creation_timestamp = 101;
    sint64 email_message_id = 102;
    oneof notification_data {
        MessageDelivered message_delivered = 201;
        MessageSoftBounced message_soft_bounced = 202;
        MessageHardBounced message_hard_bounced = 203;
        MessageOpened message_opened = 204;
        MessageClicked message_clicked = 205;
        MessageUnsubscribed message_unsubscribed = 206;
        MessageQueued message_queued = 207;
        MessageReportedAbuse message_reported_abuse = 208;
    }
}

// This represents a single email delivered by the Postfix server to the next MTA
message MessageDelivered {
}

// This represents a single email that has softbounced (e.g. graylisted)
message MessageSoftBounced {
}

// This represents a single email that has hardbounced.
message MessageHardBounced {
}

// This represents a single email that has unsubscribed
message MessageUnsubscribed {
    string ip_address = 101;
}

// This represents a single email that has been opened(via tracking pixel)
message MessageOpened {
    string ip_address = 101;
}

// This represents a single email that has been opened(link has been clicked)
message MessageClicked {
    string ip_address = 101;
    string clicked_url = 102;
}

// This represents a single email that has been delivered to MTA (mail is being sent)
message MessageQueued {
}

// This represents a single email that has been reported as abuse by the recipient
message MessageReportedAbuse {
}
